updated by souptik

--- a/src/pages/advertiser-forgot-password/advertiser-forgot-password.html
+++ b/src/pages/advertiser-forgot-password/advertiser-forgot-password.html
@@ -10,7 +10,7 @@
   <div class="button-box">
     <div class="box-wrap">
       <p class="box-title">
-        <img src="assets/img/registration.png" />Password Recovery</p>
+        <img src="assets/img/lock.png" />Password Recovery</p>
 
       <ion-grid>
         <ion-list>
@@ -26,7 +26,7 @@
           </ion-row>
 
           <ion-row class="mb-10 otp_number">
-            <ion-col col-2></ion-col>
+
             <ion-col col-2>
               <ion-input type="text"></ion-input>
             </ion-col>
