--- a/src/pages/advertiser-profile-edit/advertiser-profile-edit.html
+++ b/src/pages/advertiser-profile-edit/advertiser-profile-edit.html
@@ -13,7 +13,7 @@
             </button> -->
 
         <!-- <button ion-button menuToggle>
-              <ion-icon name="menu"></ion-icon>
+              <img src="assets/img/menu-bars.svg" />
             </button> -->
         <ion-title>Edit Profile</ion-title>
       </ion-navbar>
