--- a/src/pages/advertiser-transaction-history/advertiser-transaction-history.html
+++ b/src/pages/advertiser-transaction-history/advertiser-transaction-history.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <img src="assets/img/menu-bars.svg" />
     </button>
 
     <ion-title>Transaction History</ion-title>
