--- a/src/pages/avdertiser-change-password/avdertiser-change-password.html
+++ b/src/pages/avdertiser-change-password/avdertiser-change-password.html
@@ -7,10 +7,10 @@
 
     <ion-header>
       <ion-navbar>
-        <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>Profile</ion-title>
+        <!-- <button ion-button menuToggle>
+          <img src="assets/img/menu-bars.svg" />
+        </button> -->
+        <ion-title>Change Password</ion-title>
       </ion-navbar>
     </ion-header>
 
