--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+        <img src="assets/img/menu-bars.svg" />
     </button>
     <ion-title text-center></ion-title>
 
