--- a/src/pages/influencer-profile-edit/influencer-profile-edit.html
+++ b/src/pages/influencer-profile-edit/influencer-profile-edit.html
@@ -12,7 +12,7 @@
                 </button> -->
 
         <!-- <button ion-button menuToggle>
-                  <ion-icon name="menu"></ion-icon>
+                  <img src="assets/img/menu-bars.svg" />
                 </button> -->
         <ion-title>Edit Profile</ion-title>
       </ion-navbar>
@@ -113,11 +113,11 @@
 
   <div class="button-box-3">
     <ion-row class="mb-20">
-      <ion-col col-7>
+      <ion-col col-7 col-sm-7 col-md-5 col-lg-5>
         <label>Preferred Payment</label>
       </ion-col>
-      <ion-col col-5 class="price">
-        <span>$</span>
+      <ion-col col-5 col-sm-5 col-md-7 col-lg-7 class="price">
+        <!-- <span>$</span> -->
         <ion-input type="text" value="85"></ion-input>
 
       </ion-col>
