--- a/src/pages/influencer-profile/influencer-profile.html
+++ b/src/pages/influencer-profile/influencer-profile.html
@@ -7,7 +7,7 @@
     <ion-header>
       <ion-navbar>
         <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
+          <img src="assets/img/menu-bars.svg" />
         </button>
         <ion-title>Profile</ion-title>
       </ion-navbar>
@@ -95,10 +95,10 @@
   </div>
   <div class="button-box-3">
     <ion-row class="mb-20">
-      <ion-col col-7>
+      <ion-col col-7 col-sm-7 col-md-5 col-lg-5>
         <label>Preferred Payment</label>
       </ion-col>
-      <ion-col col-5>
+      <ion-col col-5 col-sm-5 col-md-7 col-lg-7>
         <p class="price">$85</p>
       </ion-col>
     </ion-row>
