--- a/src/pages/marketer-login/marketer-login.html
+++ b/src/pages/marketer-login/marketer-login.html
@@ -23,10 +23,12 @@
           <ion-label floating>Password</ion-label>
           <ion-input type="password"></ion-input>
         </ion-item>
+
+
       </ion-list>
 
       <ion-row class="mb-10">
-        <ion-col col-6 offset-6>
+        <ion-col class="forfot_pass_row">
           <p class="forgot_pass" (tap)="forgotpassword()">Forgot Password</p>
         </ion-col>
 
