--- a/src/pages/payment-with-option/payment-with-option.html
+++ b/src/pages/payment-with-option/payment-with-option.html
@@ -37,6 +37,7 @@
   </div>
   <div class="button-box">
     <div class="box-wrap">
+      <div class="wrapper">
       <p class="box-heading"> Required Payment $85</p>
       <h6>
         <label>Escrowed</label> ID: 45756288187</h6>
@@ -50,8 +51,10 @@
 
 
       <div class="payment_type_icon">
-        <img src="../assets/img/payment_type_icon.png">
+        <img src="assets/img/payment_type_icon.png">
       </div>
+
+    </div>
     </div>
   </div>
 
