--- a/src/pages/promot-list/promot-list.html
+++ b/src/pages/promot-list/promot-list.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <img src="assets/img/menu-bars.svg" />
     </button>
 
     <ion-title>Promoted Products</ion-title>
@@ -44,7 +44,7 @@
 
         <ion-col col-2>
           <div class="amount_block">
-            <img src="assets/img/status-closed.svg">
+            <img src="assets/img/status-closed.png">
           </div>
         </ion-col>
       </ion-row>
@@ -66,7 +66,7 @@
 
         <ion-col col-2>
           <div class="amount_block">
-            <img src="assets/img/status-active.svg">
+            <img src="assets/img/status-active.png">
           </div>
         </ion-col>
       </ion-row>
@@ -88,7 +88,7 @@
 
         <ion-col col-2>
           <div class="amount_block">
-            <img src="assets/img/status-active.svg">
+            <img src="assets/img/status-active.png">
           </div>
         </ion-col>
       </ion-row>
@@ -109,7 +109,7 @@
 
         <ion-col col-2>
           <div class="amount_block">
-            <img src="assets/img/status-closed.svg">
+            <img src="assets/img/status-closed.png">
           </div>
         </ion-col>
       </ion-row>
