--- a/src/pages/review/review.html
+++ b/src/pages/review/review.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <img src="assets/img/menu-bars.svg" />
     </button>
     <ion-title>Review</ion-title>
   </ion-navbar>
@@ -11,7 +11,7 @@
 
 <ion-content>
 
-
+  
   <ion-list class="cont-box">
     <ion-item class="mb-10" padding>
       <ion-avatar class="person-pic" item-start>
@@ -29,7 +29,7 @@
     </ion-item>
   </ion-list>
 
-
+<div class="review_box">
   <div class="review-wrap" padding>
     <ion-textarea rows="5" placeholder="write something review..."></ion-textarea>
   </div>
@@ -46,5 +46,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
+</div>
 
 </ion-content>
