--- a/src/pages/signchoice/signchoice.html
+++ b/src/pages/signchoice/signchoice.html
@@ -10,7 +10,7 @@
   <div class="button-box">
     <div class="box-wrap">
       <p class="box-title">
-        <img src="assets/img/signin.svg" />sign up as</p>
+        <img src="assets/img/signin.png" />sign up as</p>
       <ion-grid>
         <ion-row class="mb-10">
           <ion-col text-center margin-horizontal>
