--- a/src/pages/advertiser-escrowed-account/advertiser-escrowed-account.html
+++ b/src/pages/advertiser-escrowed-account/advertiser-escrowed-account.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <img src="assets/img/menu-bars.svg" />
     </button>
 
     <ion-title>Escrowed Account</ion-title>
