--- a/src/pages/advertiser-profile/advertiser-profile.html
+++ b/src/pages/advertiser-profile/advertiser-profile.html
@@ -6,7 +6,7 @@
     <ion-header>
       <ion-navbar>
         <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
+          <img src="assets/img/menu-bars.svg" />
         </button>
         <ion-title>Profile</ion-title>
       </ion-navbar>
