--- a/src/pages/cardpay/cardpay.html
+++ b/src/pages/cardpay/cardpay.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
+   <!--  <button ion-button menuToggle>
+      <img src="assets/img/menu-bars.svg" />
+    </button> -->
     <ion-title text-center>Debit/Credit Card</ion-title>
   </ion-navbar>
   <div class="filter-wrap">
@@ -21,7 +21,9 @@
   <div [ngSwitch]="card">
 
     <div *ngSwitchCase="'New-Card'" ngSelected="selected">
+      <div col class="tite-head">
       <p class="sub-title" text-center margin-top>Enter your card details</p>
+      </div>
 
       <ion-list margin-top padding-horizontal class="round-box">
         <ion-item class="card-num  mb-10">
@@ -54,7 +56,7 @@
         </div>
       </ion-list>
 
-      <ion-grid>
+      <ion-grid class="new_card_entry">
         <ion-row justify-content-center margin-top>
           <ion-col text-center text-center margin-horizontal>
             <p text-center class="btn scan-btn">
