--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     <!--  <button ion-button menuToggle>
-           <ion-icon name="menu"></ion-icon>
+           <img src="assets/img/menu-bars.svg" />
          </button> -->
     <div class="user fixed-content">
 
